force-app/main/default/objects/Target_Commit_Stats__c/Target_Commit_Stats__c.object-meta.xml
<CustomObject>
    <label>Target Commit Stats</label>
    <nameField>
        <displayFormat>TCS-{0000}</displayFormat>
        <label>Target Commit Stats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Commit Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>