force-app/main/default/objects/Target_Commit_Stats__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Target Commit Stats</relationshipLabel>
    <relationshipName>Target_Commit_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>