force-app/main/default/objects/Target_Commit_Stats__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Target Commit Stats</relationshipLabel>
    <relationshipName>Target_Commit_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>