force-app/main/default/objects/Target_Commit_Stats__c/fields/Check_Error__c.field-meta.xml
<CustomField>
    <fullName>Check_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Error</label>
    <type>Checkbox</type>
</CustomField>