force-app/main/default/objects/Target_Commit_Stats__c/fields/Feb__c.field-meta.xml
<CustomField>
    <fullName>Feb__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Feb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>