force-app/main/default/objects/Target_Commit_Stats__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <formula>Product__r.Finish__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finish</label>
    <type>Text</type>
</CustomField>