force-app/main/default/objects/Target_Commit_Stats__c/fields/IsUpload__c.field-meta.xml
<CustomField>
    <fullName>IsUpload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUpload</label>
    <type>Checkbox</type>
</CustomField>