force-app/main/default/objects/Target_Commit_Stats__c/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <formula>TEXT(Financial_Year__c ) + &apos;-&apos; + BDM__c + &apos;-&apos; + Account__c + &apos;-&apos; +  Business_Unit__c + &apos;-&apos; + Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>key</label>
    <type>Text</type>
</CustomField>