force-app/main/default/objects/Target_Commit_Stats__c/fields/Non_Available_Product__c.field-meta.xml
<CustomField>
    <fullName>Non_Available_Product__c</fullName>
    <formula>TODAY() &lt;  Product__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Available Product</label>
    <type>Checkbox</type>
</CustomField>