force-app/main/default/objects/Target_Commit_Stats__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Target Commit Stats</relationshipLabel>
    <relationshipName>Target_Commit_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>