force-app/main/default/objects/Target_Commit_Stats__c/fields/Product_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Product_Business_Unit__c</fullName>
    <formula>TEXT(Product__r.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Business Unit</label>
    <type>Text</type>
</CustomField>