force-app/main/default/objects/Target_Commit_Stats__c/fields/Unique_key__c.field-meta.xml
<CustomField>
    <fullName>Unique_key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>